--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -476,7 +476,7 @@ margin on the iframe, cause it breaks stuff. */
     height: 100%;
     margin-bottom: 5rem;
     text-align: center;
-    background: #222 no-repeat center center;
+    background: #E9F7EF no-repeat center center;
     background-size: cover;
     overflow: hidden;
 }
