--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -682,8 +682,11 @@ margin on the iframe, cause it breaks stuff. */
 .no-cover.main-header {
     min-height: 160px;
     max-height: 40%;
-    //background: #f5f8fa;
+    
 }
+/*background: #f5f8fa;*/
+
+
 
 .no-cover .page-title {
     color: rgba(0,0,0,0.8);
